--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
+  "name": "express",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "dotenv": "^16.4.5",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^4.17.2",
     "mongoose": "^8.2.0",
     "mongoosejs-cli": "^1.0.7",
-    "node": "^21.6.2",
-    "path": "^0.12.7"
-  },
-  "scripts": {
-    "dev": "nodemon server.js"
+    "nodemon": "^3.0.3"
   }
 }
